# pythoncode

./: bot.py  pyproject.toml
todo/: settings.py
