[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["DavlatbekSalimov <davlatsalimov936@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
